src/objects/Product_bundle__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Internal Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_date__c</fullName>
        <label>End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FOC_delivery__c</fullName>
        <inlineHelpText>From where should the Free of charge products in the bundle be delivered?</inlineHelpText>
        <label>FOC delivery</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dealer</fullName>
                </value>
                <value>
                    <fullName>Customer service</fullName>
                </value>
                <value>
                    <fullName>Sales rep</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FixedPrice__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If it&apos;s set to true, the quote line item&apos;s prices and quantity cannot be modified.</inlineHelpText>
        <label>Fixed Price ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Product bundle</relationshipLabel>
        <relationshipName>Product_bundle</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuoteDescription__c</fullName>
        <inlineHelpText>This text will be printed upon printing your quote</inlineHelpText>
        <label>Quote Description</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Start_date__c</fullName>
        <label>Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Discount__c</fullName>
        <label>Total Discount</label>
        <summarizedField>BOM__c.Discount_Value__c</summarizedField>
        <summaryForeignKey>BOM__c.Product_bundle__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_price__c</fullName>
        <label>Total price</label>
        <summarizedField>BOM__c.Row_price__c</summarizedField>
        <summaryForeignKey>BOM__c.Product_bundle__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Product bundle</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product bundle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product bundle</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>